# service-mesh

./: .gitignore  Cargo.toml
control-plane/: Cargo.toml
control-plane/src/: error.rs  main.rs
doc/: target.md
example/: proxy_config.toml
mesh-core/: Cargo.toml
mesh-core/src/: config.rs  lib.rs  strategy.rs
side-car-proxy/: Cargo.toml
side-car-proxy/src/: admin.rs  circuit_breaker.rs  error.rs  graceful.rs  instance.rs  lib.rs  main.rs  router.rs  tls.rs  util.rs  w3c.rs
side-car-proxy/src/config/: config.rs
side-car-proxy/src/hash/: ring.rs
side-car-proxy/src/load_balance/: cluster.rs  endpoint.rs  mod.rs  round_robin.rs
side-car-proxy/src/load_balance/p2c/: ewma.rs  mod.rs  p2c.rs
side-car-proxy/src/tel/: otel.rs
test-service/: Cargo.toml
test-service/src/: main.rs
