[package]
name = "side-car-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["tokio", "tracing", "server", "client", "http1", "full"] }
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full", "tokio", "tracing", "util"] }
tower-util = "0.3.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
