[package]
name = "side-car-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom = "0.3.3"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["tokio", "tracing", "server", "client", "http1", "full"] }
pin-project-lite = "0.2.16"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tower = { version = "0.5.2", features = ["full", "tokio", "tracing", "util"] }
tower-util = "0.3.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
