[package]
name = "side-car-proxy"
version = "0.1.0"
edition = "2024"

[lib]
name = "side_car_proxy"
path = "src/lib.rs"

[dependencies]
blake3 = "1.8.2"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["tokio", "tracing", "server", "client", "http1", "full"] }
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry-http = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-stdout = { version = "0.31.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace"] }
pin-project-lite = "0.2.16"
rand = "0.9.2"
reqwest = "0.12.24"
rustls = "0.23.31"
rustls-pki-types = "1.12.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26.2"
toml = "0.9.5"
tower = { version = "0.5.2", features = ["full", "tokio", "tracing", "util"] }
tower-util = "0.3.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
