[package]
name = "test-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4", "v7"] }
